# soroban-multisig-vault

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PENDING_PUSH.md  QUICKSTART.md  README.md  docker-compose.yml
.github/: CI_CD_FIXES.md
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  package.json
backend/src/: index.ts
backend/src/db/: pool.ts
backend/src/middleware/: errorHandler.ts
backend/src/routes/: index.ts  proposal.ts  treasury.ts
backend/src/services/: indexer.ts
contracts/: Cargo.toml
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
database/: README.md
database/migrations/: 001_initial_schema.sql
database/seeds/: seed.sql
docs/: API.md  ARCHITECTURE.md  CONTRACTS.md
frontend/: .env.example  Dockerfile  next.config.mjs  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/lib/: api.ts  soroban.ts
scripts/: deploy-mainnet.sh  deploy-testnet.sh
tests/: Cargo.toml
tests/integration/: full_flow.rs
tests/security/: security_suite.rs
trustbridge-attestations/: .gitignore  Cargo.toml  LICENSE  README.md
trustbridge-attestations/contracts/attestation-registry/: Cargo.toml
trustbridge-attestations/docs/: API.md  ARCHITECTURE.md  SECURITY.md
trustbridge-attestations/scripts/: build.sh  deploy-testnet.sh  test.sh
(+13 files in other folders)
